--- a/style.css
+++ b/style.css
@@ -170,7 +170,9 @@ header .buttons i:last-child {
 }
 
 .language {
+   /* width: 500px; */
    display: flex;
+   justify-content: space-between;
    position: absolute;
    right: 0;
    top: 0;
@@ -178,6 +180,7 @@ header .buttons i:last-child {
 }
 
 .language p {
+   font-weight: 600;
    font-size: 1.2rem;
    margin-left: 10px;
    cursor: pointer;
@@ -185,10 +188,16 @@ header .buttons i:last-child {
 
 .language p a {
    color: #fff;
+   transition: 0.3s ease;
 }
 
-.language p a.active {
-   color: #1F8A70;
+.language p a.active{
+   padding: 4px 8px;
+   border-radius: 5px;
+   border: 1px solid #fff;
+   text-decoration: none;
+   background-color: #118165;
+   color: #fff;
    pointer-events: none;
 }
 
@@ -460,8 +469,12 @@ header .buttons i:last-child {
    }
 
    .language p {
-      font-size: 1rem;
+      font-size: 0.9rem;
       margin-left: 10px;
+   }
+   
+   .language p a.active{
+      padding: 4px 7px;
    }
 
    .list-menu {
@@ -521,6 +534,11 @@ header .buttons i:last-child {
 
    .images-galery .detail {
       transform: translateY(0);
+   }
+
+   .images-galery .load-more {
+      padding: 10px 18px;
+      font-size: 0.95rem;
    }
 
 }
